--- a/3-cy-sphero-group-control.ipynb
+++ b/3-cy-sphero-group-control.ipynb
@@ -8,7 +8,8 @@
     "\n",
     "- Load in a roster of Spheros\n",
     "- Connect to each one and calibrate their position\n",
-    "- Perform Orchestration\n",
+    "- Perform blind control formations\n",
+    "\n",
     "\n"
    ]
   },
@@ -69,7 +70,7 @@
    ],
    "source": [
     "# Use sphero app to get sphero names and MAC addresses, and use those address to populate 'roster.json'\n",
-    "PROJ_ROOT = os.getcwd()\n",
+    "PROJ_ROOT = os.pardir\n",
     "ROSTER = os.path.join(PROJ_ROOT, \"roster.json\")\n",
     "roster = readJsonFile(ROSTER)\n",
     "pprint(roster)"
@@ -152,7 +153,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "devices = []\n",
@@ -294,7 +297,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Test notes 4/22\n",
@@ -445,13 +450,15 @@
    "source": [
     "# Make sure everyone's battery is above 7 volts. Below that they turn off.\n",
     "# Get roughly 2-3 hours of ontime (not continuous)\n",
-    "print_team_status(bots)\n"
+    "print_team_status(bots)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Manage sphero colors consistently\n",
@@ -502,12 +509,13 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Turn colors off to save power\n",
-    "set_team_colors(bots, colors)\n",
-    "\n"
+    "set_team_colors(bots, colors)"
    ]
   },
   {
@@ -548,7 +556,7 @@
     }
    ],
    "source": [
-    "len(bots)\n"
+    "len(bots)"
    ]
   },
   {
@@ -662,7 +670,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Demo Reel: Laps Back and Forth\n",
