--- a/6-camera-sphero-calibration.ipynb
+++ b/6-camera-sphero-calibration.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In which I attempt to use the Camera controller to play nicely with the camera despite being agnostic about the units.\n",
+    "In which I attempt to use the Camera controller to play nicely with the camera, while being agnostic about units (pixels vs cm).\n",
     "\n",
-    "In general, if there is a fatal bluetooth error, disconnect and then reconnect to the swarm.\n",
+    "\n",
+    "In general, if there is a fatal bluetooth error, disconnect and then reconnect to the team.\n",
+    "\n",
     "\n"
    ]
   },
@@ -60,6 +62,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Import to make the sphero team library accessible from other folders\n",
+    "import sys\n",
+    "sys.path.append('../')\n",
+    "\n",
+    "import SpheroTeam\n",
+    "# use reload(SpheroTeam) to refresh lib as it gets updated"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "collapsed": true
@@ -67,7 +85,7 @@
    "outputs": [],
    "source": [
     "# Library written to help with tracking\n",
-    "import SpheroTeam\n",
+    "\n",
     "from SpheroTeam.teamutil import readJsonFile, normalize_angle, angle_between_points"
    ]
   },
@@ -101,7 +119,7 @@
    "outputs": [],
    "source": [
     "# Config management\n",
-    "PROJ_ROOT = os.getcwd()\n",
+    "PROJ_ROOT = os.pardir\n",
     "CONFIG = os.path.join(PROJ_ROOT, \"config.json\")"
    ]
   },
