--- a/7-cy-sphero-camera-navigation.ipynb
+++ b/7-cy-sphero-camera-navigation.ipynb
@@ -27,7 +27,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Tracking code\n",
@@ -42,8 +44,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Support notebook usage of SpheroTeam\n",
+    "import sys\n",
+    "sys.path.append('../')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# My first python module!\n",
@@ -127,7 +144,7 @@
     }
    ],
    "source": [
-    "PROJ_ROOT = os.getcwd()\n",
+    "PROJ_ROOT = os.pardir\n",
     "CONFIG = os.path.join(PROJ_ROOT, \"config.json\")\n",
     "manager = sphero.SpheroManager()\n",
     "\n",
@@ -261,7 +278,9 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import math"
@@ -270,7 +289,9 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def bot_to_point(bot, offset,\n",
@@ -458,6 +479,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
