--- a/8-cy-sphero-camera-navigation-multi-agent.ipynb
+++ b/8-cy-sphero-camera-navigation-multi-agent.ipynb
@@ -22,7 +22,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Tracking code\n",
@@ -30,10 +32,22 @@
     "# SpheroNav base classes\n",
     "from tracker.trackingfilter import FilterSpheroBlueCover, FilterSpheroYellowCover, FilterGlow\n",
     "\n",
-    "\n",
     "from tracker.traceable import TraceableObject\n",
     "from tracker.trackerbase import ColorTracker\n",
     "from util import Vector2D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Support notebook usage of SpheroTeam\n",
+    "import sys\n",
+    "sys.path.append('../')"
    ]
   },
   {
@@ -91,10 +105,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "PROJ_ROOT = os.getcwd()\n",
+    "PROJ_ROOT = os.pardir\n",
     "CONFIG = os.path.join(PROJ_ROOT, \"config.json\")\n",
     "manager = sphero.SpheroManager()\n",
     "\n",
@@ -126,7 +142,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tracker = ColorTracker()"
@@ -307,7 +325,9 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def bot_to_point(bot, offset,\n",
@@ -583,6 +603,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
