--- a/9-cy-sphero-team-movement.ipynb
+++ b/9-cy-sphero-team-movement.ipynb
@@ -32,7 +32,6 @@
     "# SpheroNav base classes\n",
     "from tracker.trackingfilter import FilterSpheroBlueCover, FilterSpheroYellowCover, FilterGlow\n",
     "\n",
-    "\n",
     "from tracker.traceable import TraceableObject\n",
     "from tracker.trackerbase import ColorTracker\n",
     "from util import Vector2D"
@@ -40,8 +39,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Support notebook usage of SpheroTeam\n",
+    "import sys\n",
+    "sys.path.append('../')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import SpheroTeam\n",
@@ -112,7 +126,7 @@
     }
    ],
    "source": [
-    "PROJ_ROOT = os.getcwd()\n",
+    "PROJ_ROOT = os.pardir\n",
     "CONFIG = os.path.join(PROJ_ROOT, \"config.json\")\n",
     "config = readJsonFile(CONFIG)\n",
     "TEAM_COLORS = config['teamColors']\n",
@@ -194,7 +208,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tracker = ColorTracker(config['cameraID'])"
@@ -363,7 +379,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def team_go_to_points(bots, targets, offsets, traceable_object, traceable_color,\n",
@@ -531,7 +549,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "SpheroTeam.set_team_colors(bots, TEAM_COLORS)    "
@@ -563,6 +583,7 @@
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {
+    "collapsed": true,
     "run_control": {
      "marked": true
     }
@@ -696,6 +717,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
