Rewrite Initialize Import
Moving the notebooks broke the old syntax, this fixes it

--- a/notebooks/7-cy-sphero-camera-navigation.ipynb
+++ b/notebooks/7-cy-sphero-camera-navigation.ipynb
@@ -65,7 +65,7 @@
    "source": [
     "# My first python module!\n",
     "import SpheroTeam\n",
-    "\n",
+    "from SpheroTeam import initialize\n",
     "from SpheroTeam.teamutil import readJsonFile, normalize_angle, angle_between_points\n",
     "from SpheroTeam.navigation import calibrate_bot_direction, get_bot_position\n",
     "from SpheroTeam.formations import roll_polygon"
@@ -149,10 +149,10 @@
     "manager = sphero.SpheroManager()\n",
     "\n",
     "# Initialize Sphero manager using options provided in the config file\n",
-    "manager= SpheroTeam.initialize.load_sphero_roster(manager, CONFIG)\n",
+    "manager = initialize.load_sphero_roster(manager, CONFIG)\n",
     "\n",
     "# Connect to robots\n",
-    "bots = SpheroTeam.initialize.connect_sphero_team(manager, ACTIVEBOTS)\n",
+    "bots = initialize.connect_sphero_team(manager, ACTIVEBOTS)\n",
     "\n",
     "# Check power, robots shut down after dropping below 7 volts\n",
     "SpheroTeam.print_team_status(bots)"
