--- a/notebooks/9-cy-sphero-team-movement.ipynb
+++ b/notebooks/9-cy-sphero-team-movement.ipynb
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "import SpheroTeam\n",
-    "\n",
+    "from SpheroTeam import initialize\n",
     "# If project is rearchitected, rethink how to make functions accessible\n",
     "# Look into python module / api design\n",
     "from SpheroTeam.teamutil import readJsonFile, normalize_angle, angle_between_points\n",
@@ -131,14 +131,13 @@
     "config = readJsonFile(CONFIG)\n",
     "TEAM_COLORS = config['teamColors']\n",
     "\n",
-    "\n",
     "manager = sphero.SpheroManager()\n",
     "\n",
     "# Initialize Sphero manager using options provided in the config file\n",
-    "manager= SpheroTeam.initialize.load_sphero_roster(manager, CONFIG)\n",
+    "manager= initialize.load_sphero_roster(manager, CONFIG)\n",
     "\n",
     "# Connect to robots\n",
-    "bots = SpheroTeam.initialize.connect_sphero_team(manager, ACTIVEBOTS)"
+    "bots = initialize.connect_sphero_team(manager, ACTIVEBOTS)"
    ]
   },
   {
